refactor(clinic/order): integrate with external inventory system and remove redundant domain models
Refactored the order module to reference inventory entities via IDs instead of embedding them, removing duplicate models (DiagnosticAid, Medication, Procedure, SpecialistType) and their repositories. Updated OrderItem, mappers, controllers, and use cases to use InventoryIntegrationService for validation. Moved SpecialistType to shared domain and enhanced logging and validation in services.

BREAKING CHANGE: Removed domain models and repositories for DiagnosticAid, Medication, Procedure, and SpecialistType; OrderItem now requires inventory IDs for validation.